# business

./: README.md  pyproject.toml
business/: Dockerfile  docker-compose.yml  requirements.txt
business/business/: settings.py  urls.py
business/customerapp/: models.py  permissions.py  serializers.py  urls.py  views.py
business/customerapp/migrations/: 0001_initial.py
