[tool.poetry]
name = "django-business"
version = "0.1.0"
description = "django project for customer entity"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.1"
djangorestframework-simplejwt = "^5.0.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
